<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/digitalminds"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/editext_border"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <EditText
                android:id="@+id/edtxtEmailId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="right|center"
                android:hint="@string/enter_email"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txtEmailExt"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:singleLine="true"
                android:text="@string/email_address_ext"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/buttonNext"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/orange_round_corner_bg"
            android:gravity="center"
            android:padding="10dp"
            android:text="Next"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/versionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Version 1.0"
            android:textStyle="italic"
            android:textColor="@android:color/black"
            android:textSize="14sp" />
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>
