<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="horizontal">

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical">
<!--<ImageView
    android:layout_width="150dp"
    android:layout_height="100dp"
    android:layout_marginTop="-60dp"
    android:src="@drawable/dmss_black"
    />-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_welcome_text"
            android:textColor="@color/black"
            android:textSize="24dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/login_welcome_text1"
            android:textColor="@color/black"
            android:textSize="18dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/edtxEmail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/editext_border"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:paddingLeft="10dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/edtxtPassword"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/editext_border"
            android:gravity="center_vertical"
            android:hint="Password"
            android:inputType="textPassword"
            android:paddingLeft="10dp"
            android:singleLine="true" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/orange_round_corner_bg"
            android:gravity="center"
            android:padding="8dp"
            android:text="Login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/forgot_password"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"/>
    </LinearLayout>

    <Space
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</LinearLayout>